finish of admin login from googleauth

--- a/.env.local
+++ b/.env.local
@@ -4,4 +4,4 @@ VITE_APPWRITE_API_KEY=standard_215ec7249519800fc6ccaf11a890151fada63eac9ebb46215
 VITE_APPWRITE_DATABASE_ID=683a03f5001cbeffc38b
 VITE_APPWRITE_USERS_COLLECTION_ID=683a0450001cb95510bd
 VITE_APPWRITE_TRIPS_COLLECTION_ID=683a04970023cf899428
-VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
