testing user and formdata data console log in createtrip

--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,7 @@ VITE_APPWRITE_DATABASE_ID=683a03f5001cbeffc38b
 VITE_APPWRITE_USERS_COLLECTION_ID=683a0450001cb95510bd
 VITE_APPWRITE_TRIPS_COLLECTION_ID=683a04970023cf899428
 VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
+
+GEMINI_API_KEY=AIzaSyATygG356oR0sy5idHoRDSkS_NYUUT8zmw
+
+UNSPLASH_ACCESS_KEY=zep3Ala4T-O7uIqnn4dCVthsldnwpFZfzQy7yuKxPgY
